# monomer_hackathon_2025

./: .gitignore  AGENTS.md  README.md  features_exp1_plate1.csv  pyproject.toml  run_frontend.sh  setup.sh
alembic/: env.py
alembic/versions/: 0e9084bb5645_add_unit_column_to_reagent_values_table.py  15a7037b391d_description.py  1976545a548b_load_default_reagents.py  20452bcac74a_add_reagent_plate_reagent_map_and_plate_.py  4642e69619c1_initial_schema_with_experiment_reagent_.py  4e808779618d_add_plate_id_and_seconds_time_sample_to_.py  549dc6afa744_add_cell_growth_table.py  8fe0ad5d725d_add_cache_tables_for_future_house_.py  ac8e5e5f0a9e_add_time_and_plate_columns_to_plate_.py  b14a2bfd2933_load_default_reagents_from_csv.py
data/: Costs analysis of chemicals  - exp 1.csv  Exp1 Hr 2.csv  Literature_research_vibrio.csv  default_reagnets.csv  example_plate_data.csv  litterature_research_cleanup.csv  plate_0_reagents.csv  plate_1_abs.csv  vibrio_natriegens
frontend/: README.md  app.py
frontend/pages/: 01_💰_Cost_Dashboard.py  01_🧬_protocol_explorer.py  02_🧪_protocol_outputs.py  03_📊_protocol_results.py  (+1 more)
notebooks/: BO_v3-15D-prediction.ipynb  BO_v3-15D.ipynb  BO_v3-25D-pred.ipynb  BO_v3-2D.ipynb  BO_v3_visualize.ipynb  Lit->pddf.ipynb  next_experiment.csv
protocols/: E.Coli_protocol_20251026_083242.csv  E.coli_protocol_20251026_034035.csv  Vibrio natriegens_protocol_20251026_085150.csv  vibrio_natriegens_protocol.csv
scripts/: extract_features.py  generate_protocol.py  ingest_absorbance_data.py  ingest_experiment_data.py  ingest_plate_data.py
src/: main.py
(+44 files in other folders)
